<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvKmFuelTitle"
        style="@style/FragmentTitleText"
        android:text="@string/header_viagem_completa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/clMainContentViagemCurso"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvKmFuelTitle"
        app:layout_constraintBottom_toTopOf="@id/btnKmFuelConfirmation"
        app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clcontente"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clKmInicialDesabilitado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:padding="8dp"
            android:background="@drawable/bg_border_shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvKmInicialTexto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvKmInicial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="35.6 km"
                app:layout_constraintStart_toEndOf="@id/tvKmInicialTexto"
                app:layout_constraintTop_toTopOf="@id/tvKmInicialTexto"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCombustivelInicialTexto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/combustivel_Inicial_text"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvKmInicialTexto"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCombustivelInicial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3/8"
                app:layout_constraintStart_toEndOf="@id/tvCombustivelInicialTexto"
                app:layout_constraintTop_toTopOf="@id/tvCombustivelInicialTexto"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clKmInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clKmInicialDesabilitado">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvKmTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quilometragem Final"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilKm"
                style="@style/TextInputLayoutOutlinedBoxBase"
                android:layout_marginStart="0dp"
                android:layout_marginTop="6dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvKmTitulo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietKm"
                    style="@style/TextInputEditText"
                    android:hint="@string/km_hint_full"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLength="7"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="viewEnd" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCombustivelInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clKmInicial">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPostoCombustivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_fuel_level"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clBarraCombustivel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCombustivelTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Combusivel final"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clBarraCombustivel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCombustivelTitulo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clActionBarraCombustivel"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_shape"
                app:layout_constraintBottom_toBottomOf="@+id/ivPostoCombustivel"
                app:layout_constraintStart_toEndOf="@id/ivPostoCombustivel"
                app:layout_constraintTop_toTopOf="@+id/ivPostoCombustivel">

                <com.warkiz.widget.IndicatorSeekBar
                    android:id="@+id/isbFuelLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:isb_indicator_color="@color/colorPrimary"
                    app:isb_indicator_text_color="@color/colorAccent"
                    app:isb_indicator_text_size="18sp"
                    app:isb_max="8"
                    app:isb_min="0"
                    app:isb_only_thumb_draggable="false"
                    app:isb_progress="0"
                    app:isb_seek_smoothly="true"
                    app:isb_show_indicator="circular_bubble"
                    app:isb_show_tick_marks_type="oval"
                    app:isb_show_tick_texts="true"
                    app:isb_thumb_color="@color/colorAccent"
                    app:isb_thumb_size="20dp"
                    app:isb_tick_marks_drawable="@drawable/seekbar_lines"
                    app:isb_tick_marks_size="5dp"
                    app:isb_tick_texts_color="@color/colorPrimary"
                    app:isb_tick_texts_size="15sp"
                    app:isb_ticks_count="9"
                    app:isb_track_background_color="@android:color/darker_gray"
                    app:isb_track_background_size="4dp"
                    app:isb_track_progress_color="@color/colorPrimary"
                    app:isb_track_progress_size="3dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clCombustivelInicial">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_status"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/root_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tvStatusText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <RadioButton
                        android:id="@+id/red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tudo certo"
                        android:onClick="onRadioButtonClicked"/>

                    <RadioButton
                        android:id="@+id/green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Algo deu Errado"
                        android:layout_marginStart="26dp"
                        android:onClick="onRadioButtonClicked"/>

                </RadioGroup>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clQuemRecebeu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/clStatus"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvQuemRecebeu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quem_recebeu"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilQuemRecebeu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutOutlinedBoxBase"
                android:layout_margin="2dp"
                app:endIconMode="clear_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvQuemRecebeu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietQuemRecebeu"
                    style="@style/TextInputEditText"
                    android:hint="Nome"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="viewEnd"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAcontecimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clQuemRecebeu">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvItensMoveis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Oque aconteceu?"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clItensMoveis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_border_shape"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvItensMoveis">

                <RadioGroup
                    android:id="@+id/rgAcidentes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:flow_horizontalAlign="start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    android:padding="8dp">

                    <RadioButton
                        android:id="@+id/rbAvaria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Avaria"
                        android:onClick="onRadioButtonClicked"/>

                    <RadioButton
                        android:id="@+id/rbBatida"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Batida"
                        android:onClick="onRadioButtonClicked"/>

                    <RadioButton
                        android:id="@+id/rbLocalErrado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Local Errado"
                        android:onClick="onRadioButtonClicked"/>

                    <RadioButton
                        android:id="@+id/rbOutro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Outro"
                        android:onClick="onRadioButtonClicked"/>

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDescriçãodoOcorrido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clAcontecimento">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descricao_ocorrido"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutOutlinedBoxBase"
                android:layout_margin="2dp"
                app:endIconMode="clear_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescricao">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietDescricao"
                    style="@style/TextInputEditText"
                    android:inputType="text"
                    android:lines="5"
                    android:maxLines="5"
                    android:textAlignment="viewEnd"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnKmFuelConfirmation"
        style="@style/GreenButton"
        android:layout_marginBottom="12dp"
        android:enabled="true"
        android:text="@string/action_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>